reset character counter on submission and fixed word overflow

--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -84,6 +84,7 @@ div.aboveBorder {
   background: transparent;
   padding: 1em;
   font-weight: 500;
+  overflow-wrap: break-word;
 }
 
 article.tweet footer {
